second user receives updated pot properly